--- a/index.html
+++ b/index.html
@@ -4,31 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="theme-color" content="#0f172a">
+    <meta name="theme-color" content="#022c22">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="manifest" href="manifest.json">
-    <title>AGENDEI - Executive Voice Suite</title>
+    <title>AGENDEI - Amazon Executive Suite</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
         :root {
-            --gold-primary: #FFD700;
-            --gold-dark: #B8860B;
-            --emerald-vibrant: #10b981;
-            --royal-blue: #1e40af;
-            --deep-blue: #0f172a;
-            --glass-bg: rgba(255, 255, 255, 0.08);
-            --glass-border: rgba(255, 255, 255, 0.2);
+            --amazon-green: #064e3b;
+            --amazon-gold: #d97706;
+            --deep-river: #021526;
+            --glass-bg: rgba(6, 78, 59, 0.22);
         }
 
         body { 
-            font-family: 'Inter', sans-serif; 
-            background: #0f172a;
+            font-family: 'Plus Jakarta Sans', sans-serif; 
+            background: var(--deep-river);
             overflow-x: hidden; 
-            color: #ffffff;
+            color: #ecfdf5;
             min-height: 100vh;
-            /* Evita bounce no iOS */
             position: fixed;
             width: 100%;
             height: 100%;
@@ -40,7 +36,6 @@
             -webkit-overflow-scrolling: touch;
         }
 
-        /* Animated Mesh Background */
         .mesh-bg {
             position: fixed;
             top: 0;
@@ -48,52 +43,36 @@
             width: 100%;
             height: 100%;
             z-index: -1;
-            overflow: hidden;
-            background: radial-gradient(circle at 50% 50%, #1e3a8a 0%, #0f172a 100%);
+            background: radial-gradient(circle at 50% 50%, #032030 0%, #021526 100%);
         }
-
-        .orb {
-            position: absolute;
-            border-radius: 50%;
-            filter: blur(140px);
-            opacity: 0.4;
-            animation: float 25s infinite alternate ease-in-out;
-        }
-
-        @keyframes float {
-            0% { transform: translate(0, 0) scale(1) rotate(0deg); }
-            50% { transform: translate(15vw, 10vh) scale(1.3) rotate(45deg); }
-            100% { transform: translate(-5vw, 20vh) scale(0.9) rotate(-45deg); }
-        }
-
-        .orb-1 { width: 80vw; height: 80vw; background: var(--royal-blue); top: -10vh; left: -10vw; animation-delay: 0s; }
-        .orb-2 { width: 70vw; height: 70vw; background: var(--emerald-vibrant); bottom: -10vh; right: -10vw; animation-delay: -7s; opacity: 0.25; }
-        .orb-3 { width: 50vw; height: 50vw; background: var(--gold-primary); top: 20vh; right: 5vw; animation-delay: -12s; opacity: 0.15; }
 
         .glass-card {
-            background: var(--glass-bg);
-            backdrop-filter: blur(40px);
-            -webkit-backdrop-filter: blur(40px);
-            border: 1px solid var(--glass-border);
-            box-shadow: 0 20px 60px -15px rgba(0, 0, 0, 0.5);
+            background: rgba(255, 255, 255, 0.98);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
         }
 
-        .text-gradient {
-            background: linear-gradient(135deg, #FFD700 0%, #ffffff 50%, #38bdf8 100%);
+        .logo-amazon {
+            background: linear-gradient(180deg, #fef3c7 0%, #d97706 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            font-weight: 900;
         }
 
-        .bg-gold-gradient { 
-            background: linear-gradient(135deg, #FFD700 0%, #B8860B 100%); 
+        .premium-glow {
+            box-shadow: 0 0 40px -10px rgba(217, 119, 6, 0.4);
         }
 
-        .bg-emerald-gradient {
-            background: linear-gradient(135deg, #10b981 0%, #064e3b 100%);
+        .bg-amazon-premium { 
+            background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%); 
         }
 
-        .custom-scrollbar::-webkit-scrollbar { width: 5px; }
-        .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.2); border-radius: 10px; }
+        .btn-press:active { transform: scale(0.96); transition: transform 0.1s; }
+
+        .custom-scrollbar::-webkit-scrollbar { width: 4px; }
+        .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(255, 255, 255, 0.1); border-radius: 10px; }
     </style>
 <script type="importmap">
 {
@@ -110,22 +89,7 @@
 </script>
 </head>
 <body>
-    <div class="mesh-bg">
-        <div class="orb orb-1"></div>
-        <div class="orb orb-2"></div>
-        <div class="orb orb-3"></div>
-    </div>
+    <div class="mesh-bg"></div>
     <div id="root"></div>
-
-    <script>
-      // Registro do Service Worker para PWA
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('./sw.js')
-            .then(reg => console.log('PWA Service Worker registrado'))
-            .catch(err => console.log('Erro ao registrar SW:', err));
-        });
-      }
-    </script>
 </body>
 </html>
